--- a/META.yml
+++ b/META.yml
@@ -1,22 +1,29 @@
---- #YAML:1.0
-name:                Jaipo
-version:             0.02
-abstract:            Jaiku (and other micro-blogging sites) Client
-license:             GPL
-author:              
-    - BlueT <bluet@blue.org>, Cornelius <cornelius.howl@gmail.com>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Class::Accessor::Fast:         0
-    Hash::Merge:                   0
-    Net::Jaiku:                    0
-    Net::Twitter:                  0
-    Number::RecordLocator:         0
-    Test::More:                    0
-    Text::Table:                   0
-    WWW::Plurk:                    0
-    YAML::Syck:                    0
+---
+abstract: 'Micro-blogging Client'
+author:
+  - 'BlueT, C<< <bluet at blue.org> >>'
+distribution_type: module
+generated_by: 'Module::Install version 0.80'
+license: gpl
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Jaipo
+no_index:
+  directory:
+    - inc
+    - t
+recommends:
+  Mac::Glue: 1.30
+  Mac::Growl: 0.67
+requires:
+  App::Cache: 0
+  Class::Accessor::Fast: 0
+  Hash::Merge: 0
+  Net::Twitter: 0
+  Number::RecordLocator: 0
+  Term::ReadLine: 0
+  Test::More: 0
+  Text::Table: 0
+  YAML::Syck: 0
+version: 0.20
